--- a/resources/sass/blocks/main-nav.scss
+++ b/resources/sass/blocks/main-nav.scss
@@ -141,7 +141,7 @@
             &:hover {
                 .submenu {
                     display: block;
-                    z-index: 1;
+                    z-index: 10;
                 }
 
                 &:before {
