--- a/resources/sass/blocks/product-card.scss
+++ b/resources/sass/blocks/product-card.scss
@@ -39,6 +39,7 @@
     }
 
     &__slider {
+        z-index: 1;
         padding: 10px 10px;
         margin-right: 10px;
         width: 48%;
